redirect.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 7777
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                stat_prefix: http_proxy
                route_config:
                  name: all
                  virtual_hosts:
                    - name: backend_cluster
                      domains:
                        - '*'
                      routes:
                        - match: { prefix: "/welcome"}
                          direct_response: {status: 200, body: { inline_string: "hi from tech confer"}}
                        - match: {prefix: "/service-2/status"}
                          route:
                            cluster: backend_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
  clusters:
    - name: backend_cluster
      connect_timeout: 50s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                   socket_address:
                     address: service-2
                     port_value: 8083
            - endpoint:
                address:
                  socket_address:
                    address: service-3
                    port_value: 8084
